--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta http-equiv="CONTENT-TYPE" content="text/html; charset=UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
   <title>Pandora</title>
   <style>
     :root {
